# mikoto

./: .env.example  .env.server  .eslintignore  .eslintrc.js  .eslintrc.json  .eslintrc.old.json  .gitignore  .prettierignore  .prettierrc  .prototools  ARCHITECTURE.md  CLAUDE.md  Caddyfile  Cargo.toml  LICENSE  README.md  SECURITY.md  STRUCTURE.md  docker-compose.yml  eslint.config.mts  justfile  moon.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json  turbo.json
.claude/: settings.json
.claude/agents/: browser-tester.md  database-specialist.md  database-wizard.md  mobile-specialist.md  performance-specialist.md  platform-visionary.md  project-architect.md  qa-tester.md  realtime-specialist.md  refactoring-specialist.md  researcher.md  rustacean.md  security-guardian.md  security-specialist.md  technical-writer.md  test-specialist.md  tester-supreme.md  the-refactorer.md
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: build-desktop-app.yaml  cla-assistant.yaml  docker-mikoto-client.yml  docker-mikoto-media-server.yaml  docker-mikoto-server.yaml  docker-mikoto-server.yml  docker-superego.yaml  moon.yaml  npm-publish-lucid.yaml  npm-publish-mikotojs.yaml  test.yaml  typecheck.yaml
.moon/: toolchain.yml  workspace.yml
.moon/tasks/: rust.yml
.scripts/: setup-env.js  setup-minio.js
apps/auth/: .env.example  Cargo.toml  Dockerfile  README.md
apps/auth/migration/: Cargo.toml
apps/auth/migrations/: 20240427084604_first.sql
apps/auth/prisma/: schema.prisma
apps/auth/src/: context.rs  db.rs  env.rs  error.rs  main.rs
apps/auth/src/email/: reset.hbs  verify.hbs
apps/auth/src/entities/: account.rs  bot.rs  mod.rs  refresh_token.rs  user.rs  verification.rs
apps/auth/src/functions/: captcha.rs  jwt.rs  mail.rs  mod.rs
apps/auth/src/models/: mod.rs
apps/auth/src/routes/: bots.rs  change_password.rs  login.rs  mod.rs  refresh.rs  register.rs  reset_password.rs
apps/client/: .env  .gitignore  Dockerfile  index.html  moon.yml  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/content-proxy/: Cargo.toml  Dockerfile  config.toml  moon.yml
apps/content-proxy/src/: config.rs  env.rs  error.rs  main.rs
apps/content-proxy/src/functions/: file_response.rs  mime.rs  mod.rs  storage.rs
apps/content-proxy/src/routes/: default_avatar.rs  mod.rs  proxy.rs  serve.rs  upload.rs
apps/design-language/: package.json
apps/desktop/: README.md  forge.config.js  package.json  tsconfig.json
apps/docs/: README.md  moon.yml  package.json  vite.config.ts
apps/electron/: package.json  tsconfig.json
apps/media-server/: Dockerfile  README.md  package.json  tsconfig.json
apps/mobile/: App.tsx  app.json  babel.config.js  index.ts  metro.config.js  moon.yml  package.json  tsconfig.json
apps/server/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.development.yml  hyperschema.json  package.json  schema.sophon  tsconfig.json
apps/superego/: .env.example  Cargo.toml  Dockerfile  README.md  api.json  moon.yml  schema.sql
apps/superego/docs/: domain-handles.md
apps/superego/migrations/: 20241002041842_first.sql  20250928220313_add_handle_to_space.sql  20251005024925_delve_domain_verification.sql  20251025003938_message_attachments.sql  20260120020043_add_space_handle.sql  20260306111214_bot_redesign.sql  20260330224504_add_space_is_public.sql  20260401141445_e2ee_dm.sql  20260403220829_dm_standalone_channel.sql  20260403220829_relationship_nullable_space_id.sql  20260404101922_dm_standalone_channel.sql  20260405214012_mandatory_handles.sql  20260406013958_mandatory_handles.sql  20260420010216_notification_preferences.sql  20260424002735_push_subscriptions.sql  20260425010450_add_fulltext_search.sql
apps/superego/schema/mikoto/public/: 02_enums.sql
apps/superego/src/: ascii.txt  ascii2.txt  db.rs  dump.rs  env.rs  error.rs  lib.rs  main.rs
apps/superego/src/email/: reset.hbs  verify.hbs
apps/superego/src/entities/: account.rs  ban.rs  bot.rs  channel.rs  document.rs  domain.rs  handle.rs  invite.rs  key_package.rs  macros.rs  member.rs  message.rs  message_attachment.rs  mls_group.rs  mls_message.rs  mod.rs  models.rs  notification_preference.rs  push_subscription.rs  refresh_token.rs  role.rs  space.rs  user.rs  verification.rs
apps/superego/src/entities/account/: mod.rs  refresh_token.rs  verification.rs
apps/superego/src/functions/: captcha.rs  filetypes.rs  handle_verification.rs  jwt.rs  mail.rs  mod.rs  permissions.rs  pubsub.rs  push.rs  rate_limit.rs  sha3.rs  time.rs  validation.rs
apps/superego/src/middlewares/: load.rs  mod.rs
apps/superego/src/routes/: bots.rs  dm.rs  domains.rs  handles.rs  mod.rs  push.rs  router.rs  well_known.rs
apps/superego/src/routes/account/: change_password.rs  login.rs  mod.rs  refresh.rs  register.rs  reset_password.rs
apps/superego/src/routes/cdn/: config.rs  mod.rs  serve.rs  upload.rs
apps/superego/src/routes/channels/: documents.rs  messages.rs  mod.rs  voice.rs
apps/superego/src/routes/collab/: mod.rs  protocol.rs  registry.rs  session.rs
apps/superego/src/routes/spaces/: bans.rs  invites.rs  members.rs  mod.rs  roles.rs  search.rs
apps/superego/src/routes/users/: key_packages.rs  mls_messages.rs  mod.rs  relations.rs
apps/superego/src/routes/ws/: design.md  mod.rs  schema.rs  state.rs
apps/superego/src/services/: delve.rs  mod.rs
crates/mikoto-avatars/: Cargo.toml
crates/mikoto-client/: Cargo.toml  README.md  moon.yml
crates/mikoto-client/src/: bot.rs  cache.rs  client.rs  context.rs  error.rs  generated.rs  handler.rs  http.rs  lib.rs  ws.rs
crates/mikoto-codegen/: Cargo.toml
crates/mls-wasm/: Cargo.toml
crates/mls-wasm/src/: lib.rs
crates/openapi-codegen/: Cargo.toml
docs/: docusaurus.config.ts  package.json
docs/blog/: FirstBlog.md  authors.yml
hyperschema/: readme.md
services/kazari/: Cargo.toml
services/kazari/src/: main.rs
services/kazari/src/routes/: mod.rs  proxy.rs  serve.rs
services/kazari/src/util/: error.rs  mod.rs  s3.rs
(+566 files in other folders)
