[package]
name = "superego"
version = "0.1.0"
edition = "2021"

[dependencies]
# the basic dependencies
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
envy = "0.4.2"
log = "0.4.21"
pretty_env_logger = "0.5.0"

# web server
axum = { version = "0.7.5", features = ["multipart"] }
tower-http = { version = "0.5.2", features = ["cors"] }
time =  { version = "0.3.36", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4"]}

# database
[dependencies.sea-orm]
version="0.12"
features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-time", "with-uuid"]
