[package]
name = "content-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
rocket = "=0.5.0-rc.4"
rust-s3 = "0.33.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
url = "2.4.1"
