[package]
name = "content-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the basic dependencies
tokio = { version = "1.35.1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
native-tls = "0.2"

mime = "0.3.17"
mime_guess = "2.0.4"
rust-s3 = { version = "0.34.0-rc3", features = ["tokio-native-tls"] }
url = "2.4.1"
image = "0.24.7"
toml = "0.8.8"
nanoid = "0.4.0"
axum = { version = "0.7.5", features = ["multipart"] }
tower-http = { version = "0.5.2", features = ["cors"] }
envy = "0.4.2"
