[package]
name = "content-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# the basic dependencies
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
dotenvy = "0.15.7"
envy = "0.4.2"
log = "0.4.21"
pretty_env_logger = "0.5.0"

# web server
axum = { version = "0.7.5", features = ["multipart"] }
tower-http = { version = "0.5.2", features = ["cors"] }

mime = "0.3.17"
mime_guess = "2.0.4"

url = "2.4.1"
image = "0.24.7"
toml = "0.8.8"
nanoid = "0.4.0"

[dependencies.rust-s3]
git = "https://github.com/ScuffleTV/rust-s3.git"
branch = "troy/rustls"
default-features = false
features = ["tokio-rustls-tls"]

[dependencies.reqwest]
version = "0.12.3"
default-features = false
features = ["charset", "http2", "rustls-tls"]
