[package]
name = "mls-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openmls = { version = "0.8.1", features = ["js"] }
openmls_rust_crypto = "0.5.1"
openmls_basic_credential = "0.5"
openmls_traits = "0.5"
tls_codec = { version = "0.4", features = ["derive"] }

wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
