[package]
name = "kazari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes="1.2.1"
tokio-util="0.7.3"
reqwest="0.11.11"
rust-s3 = "0.32.3"
serde = "1.0.142"
serde_json = "1.0"
image = "0.24.3"
lazy_static = "1.4.0"

[dependencies.rocket]
version="0.5.0-rc.2"
features = ["json", "uuid"]
